--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a class="nav-link" href="#">FAQ</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacts</a>
+                    <a class="nav-link" href="contact.html">Contacts</a>
                   </li>
                 </ul>
                 <div class="d-flex d-md-none align-items-center justify-content-center">
@@ -87,7 +87,7 @@
                         <p class="font-20">Top Selling!</p>
                         <h1 class="text-orange font-60">Top Collection</h1>
                         <p class="font-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidid</p>
-                        <div class="text-center">
+                        <div class="text-center my-3">
                             <button class="btn btn-1">Shop now</button>
                         </div>
                     </div>
@@ -280,98 +280,19 @@
                 </button>
             </div>
         </section>
-        <section class="section__testimonial">
+        <!-- <section class="section__testimonial">
             <h1 class="text-center text-orange my-3 font-60">Testimonials</h1>
-            <!-- <div class="row d-flex align-items-center g-4">
-                <div >
-                    <div id="carouselExample2" class="carousel slide d-flex">
-                        <div class="carousel-inner p-4 d-flex">
-                          <div class="carousel-item active">
-                                <div>
-                                    <img src="https://placehold.co/600x500/FDD1CB/white" class="d-block img-fluid" alt="...">
-                                </div>
-                                <div class="d-flex align-items-center justify-content-between mb-5">
-                                    <div class="d-flex align-items-center gap-4">
-                                        <img src="wwwroot/images/testimonial-avatar.svg" alt="avatar">
-                                        <div>
-                                            <p class="mb-0 bold font-14">Ajay Dharpale</p>
-                                            <p class="mb-0 font-14 text-black-40">@ajay_dhar29</p>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <img src="wwwroot/images/testimonial-logo.svg" alt="company-logo">
-                                    </div>
-                                </div>
-                                <p class="bold mb-4 font-20">I've never experienced such a perfect balance of comfort
-                                    and style in a pair of shoes before. These shoes not only
-                                    look great, but they also feel like I'm walking on clouds.
-                                    I can wear them all day without any discomfort. Truly 
-                                    impressed</p>
-                                <p class="font-14 text-black-40">March 22, 2023</p>
-                          </div>
-                          <div class="carousel-item">
-                            <div class="d-flex align-items-center justify-content-between mb-5">
-                                <div class="d-flex align-items-center gap-4">
-                                    <img src="wwwroot/images/testimonial-avatar.svg" alt="avatar">
-                                    <div>
-                                        <p class="mb-0 bold font-14">Ajay Dharpale</p>
-                                        <p class="mb-0 font-14 text-black-40">@ajay_dhar29</p>
-                                    </div>
-                                </div>
-                                <div>
-                                    <img src="wwwroot/images/testimonial-logo.svg" alt="company-logo">
-                                </div>
-                            </div>
-                            <p class="bold mb-4 font-20">I've never experienced such a perfect balance of comfort
-                                and style in a pair of shoes before. These shoes not only
-                                look great, but they also feel like I'm walking on clouds.
-                                I can wear them all day without any discomfort. Truly 
-                                impressed</p>
-                            <p class="font-14 text-black-40">March 22, 2023</p>
-                          </div>
-                          <div class="carousel-item">
-                            <div class="d-flex align-items-center justify-content-between mb-5">
-                                <div class="d-flex align-items-center gap-4">
-                                    <img src="wwwroot/images/testimonial-avatar.svg" alt="avatar">
-                                    <div>
-                                        <p class="mb-0 bold font-14">Ajay Dharpale</p>
-                                        <p class="mb-0 font-14 text-black-40">@ajay_dhar29</p>
-                                    </div>
-                                </div>
-                                <div>
-                                    <img src="wwwroot/images/testimonial-logo.svg" alt="company-logo">
-                                </div>
-                            </div>
-                            <p class="bold mb-4 font-20">I've never experienced such a perfect balance of comfort
-                                and style in a pair of shoes before. These shoes not only
-                                look great, but they also feel like I'm walking on clouds.
-                                I can wear them all day without any discomfort. Truly 
-                                impressed</p>
-                            <p class="font-14 text-black-40">March 22, 2023</p>
-                          </div>
-                        </div>
-                        <button class="carousel-control-prev carousel-testimonial-prev" type="button" data-bs-target="#carouselExample2" data-bs-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next carousel-testimonial-next" type="button" data-bs-target="#carouselExample2" data-bs-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
-                </div>
-            </div> -->
-
+            
             <div style="position: relative;">
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="position: relative;">
+                <div id="carouselExampleControls" class="carousel slide " style="position: relative;">
                     <div class="carousel-inner">
 
                       <div class="carousel-item active">
-                        <div class="row">
-                            <div class="col">
+                        <div class="row g-4">
+                            <div class="col-12 col-lg-6">
                                 <img src="https://placehold.co/400x500/FDD1CB/white" class="d-block w-100" alt="...">
                             </div>
-                            <div class="col d-flex flex-column justify-content-center">
+                            <div class="col-12 col-lg-6 d-flex flex-column justify-content-center">
                                 <div class="bg-orange-20 p-4 rounded-3 shadow">
                                     <div class="d-flex align-items-center justify-content-between mb-5">
                                         <div class="d-flex align-items-center gap-4">
@@ -396,11 +317,11 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="row">
-                            <div class="col">
+                        <div class="row g-4">
+                            <div class="col-12 col-lg-6">
                                 <img src="https://placehold.co/400x500/FDD1CB/white" class="d-block w-100" alt="...">
                             </div>
-                            <div class="col d-flex flex-column justify-content-center">
+                            <div class="col-12 col-lg-6 d-flex flex-column justify-content-center">
                                 <div class="bg-orange-20 p-4 rounded-3 shadow">
                                     <div class="d-flex align-items-center justify-content-between mb-5">
                                         <div class="d-flex align-items-center gap-4">
@@ -425,11 +346,11 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="row">
-                            <div class="col">
+                        <div class="row g-4">
+                            <div class="col-12 col-lg-6">
                                 <img src="https://placehold.co/400x500/FDD1CB/white" class="d-block w-100" alt="...">
                             </div>
-                            <div class="col d-flex flex-column justify-content-center">
+                            <div class="col-12 col-lg-6 d-flex flex-column justify-content-center">
                                 <div class="bg-orange-20 p-4 rounded-3 shadow">
                                     <div class="d-flex align-items-center justify-content-between mb-5">
                                         <div class="d-flex align-items-center gap-4">
@@ -465,6 +386,9 @@
                       <span class="visually-hidden">Next</span>
                     </button>
             </div>
+        </section> -->
+        <section>
+            <div class="imprzd-wrapper" id="imprzd-wrapper-section"></div>
         </section>
         
         <section>
@@ -576,7 +500,36 @@
         </div>
     </footer>
 
-
+    <script defer="defer" src="https://www.imprzd.com/bi/in-scol/app.js" inject="true" async test="{}" id="imprzd_SOL" domain="https://www.imprzd.com" api_type="scol" 
+merchantdata="MTg=" 
+imprzd_title_text="Customer Reviews" 
+imprzd_title_font="Inter" 
+imprzd_title_font_color="#DB4834"
+imprzd_title_font_size="50" 
+imprzd_title_font_weight="700" 
+imprzd_button_text="VIEW MORE POSTS"
+imprzd_button_url="https://gaitonde.com/testimonials.php"
+imprzd_button_color="#DB4834"
+imprzd_button_border_radius="10px"
+imprzd_button_font="Inter" 
+imprzd_button_font_color="#FFF" 
+imprzd_button_font_size="23"
+imprzd_button_font_weight="700" 
+imprzd_post_title_font="Inter" 
+imprzd_post_title_font_color="#DB4834"
+imprzd_post_title_font_size="24" 
+imprzd_post_title_font_weight="700" 
+imprzd_post_desc_font="Inter"
+imprzd_post_desc_font_color="#201D1D" 
+imprzd_post_desc_font_size="16" 
+imprzd_post_desc_font_weight="400"
+imprzd_container_color="#FFF" 
+imprzd_container_shadow_color="#ffffffaf"
+google_font_link="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+display_customer_name="true" 
+display_product_name="true" 
+display_posted_date="true"
+        display_shared_channel="true"></script>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
