--- a/product-page.html
+++ b/product-page.html
@@ -52,7 +52,7 @@
                     <a class="nav-link" href="#">FAQ</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacts</a>
+                    <a class="nav-link" href="contact.html">Contacts</a>
                   </li>
                 </ul>
                 <div class="d-flex d-md-none align-items-center justify-content-center">
@@ -237,81 +237,7 @@
             </div>
         </section>
         <section>
-            <h1 class="text-center text-orange my-3 font-60">Customer Review</h1>
-            <div class="my-5">
-                <div id="carouselExample2" class="carousel slide">
-                    <div class="carousel-inner bg-orange-10 shadow p-4">
-                      <div class="carousel-item active">
-                            <div class="d-flex align-items-center justify-content-between mb-5">
-                                <div class="d-flex align-items-center gap-4">
-                                    <img src="wwwroot/images/testimonial-avatar.svg" alt="avatar">
-                                    <div>
-                                        <p class="mb-0 bold font-14">Ajay Dharpale</p>
-                                        <p class="mb-0 font-14 text-black-40">@ajay_dhar29</p>
-                                    </div>
-                                </div>
-                                <div>
-                                    <img src="wwwroot/images/testimonial-logo.svg" alt="company-logo">
-                                </div>
-                            </div>
-                            <p class="bold mb-4 font-20">I've never experienced such a perfect balance of comfort
-                                and style in a pair of shoes before. These shoes not only
-                                look great, but they also feel like I'm walking on clouds.
-                                I can wear them all day without any discomfort. Truly 
-                                impressed</p>
-                            <p class="font-14 text-black-40">March 22, 2023</p>
-                      </div>
-                      <div class="carousel-item">
-                        <div class="d-flex align-items-center justify-content-between mb-5">
-                            <div class="d-flex align-items-center gap-4">
-                                <img src="wwwroot/images/testimonial-avatar.svg" alt="avatar">
-                                <div>
-                                    <p class="mb-0 bold font-14">Ajay Dharpale</p>
-                                    <p class="mb-0 font-14 text-black-40">@ajay_dhar29</p>
-                                </div>
-                            </div>
-                            <div>
-                                <img src="wwwroot/images/testimonial-logo.svg" alt="company-logo">
-                            </div>
-                        </div>
-                        <p class="bold mb-4 font-20">I've never experienced such a perfect balance of comfort
-                            and style in a pair of shoes before. These shoes not only
-                            look great, but they also feel like I'm walking on clouds.
-                            I can wear them all day without any discomfort. Truly 
-                            impressed</p>
-                        <p class="font-14 text-black-40">March 22, 2023</p>
-                      </div>
-                      <div class="carousel-item">
-                        <div class="d-flex align-items-center justify-content-between mb-5">
-                            <div class="d-flex align-items-center gap-4">
-                                <img src="wwwroot/images/testimonial-avatar.svg" alt="avatar">
-                                <div>
-                                    <p class="mb-0 bold font-14">Ajay Dharpale</p>
-                                    <p class="mb-0 font-14 text-black-40">@ajay_dhar29</p>
-                                </div>
-                            </div>
-                            <div>
-                                <img src="wwwroot/images/testimonial-logo.svg" alt="company-logo">
-                            </div>
-                        </div>
-                        <p class="bold mb-4 font-20">I've never experienced such a perfect balance of comfort
-                            and style in a pair of shoes before. These shoes not only
-                            look great, but they also feel like I'm walking on clouds.
-                            I can wear them all day without any discomfort. Truly 
-                            impressed</p>
-                        <p class="font-14 text-black-40">March 22, 2023</p>
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev carousel-testimonial-prev" type="button" data-bs-target="#carouselExample2" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next carousel-testimonial-next" type="button" data-bs-target="#carouselExample2" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-            </div>
+            <div class="imprzd-wrapper" id="imprzd-wrapper-section"></div>
         </section>
         <section class="py-5">
             <h1 class="text-center text-orange my-3 font-60">Similar Product</h1>
@@ -443,8 +369,39 @@
                 </div>
             </div>
         </div>
-      </footer>
+    </footer>
     
+    <script defer="defer" src="https://www.imprzd.com/bi/in-scol/app.js" inject="true" async test="{}" id="imprzd_SOL" domain="https://www.imprzd.com" api_type="scol" 
+        merchantdata="MTg=" 
+        imprzd_title_text="Customer Reviews" 
+        imprzd_title_font="Inter" 
+        imprzd_title_font_color="#DB4834"
+        imprzd_title_font_size="50" 
+        imprzd_title_font_weight="700" 
+        imprzd_button_text="VIEW MORE POSTS"
+        imprzd_button_url="https://gaitonde.com/testimonials.php"
+        imprzd_button_color="#DB4834"
+        imprzd_button_border_radius="10px"
+        imprzd_button_font="Inter" 
+        imprzd_button_font_color="#FFF" 
+        imprzd_button_font_size="23"
+        imprzd_button_font_weight="700" 
+        imprzd_post_title_font="Inter" 
+        imprzd_post_title_font_color="#DB4834"
+        imprzd_post_title_font_size="24" 
+        imprzd_post_title_font_weight="700" 
+        imprzd_post_desc_font="Inter"
+        imprzd_post_desc_font_color="#201D1D" 
+        imprzd_post_desc_font_size="16" 
+        imprzd_post_desc_font_weight="400"
+        imprzd_container_color="#FFF" 
+        imprzd_container_shadow_color="#ffffffaf"
+        google_font_link="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        display_customer_name="true" 
+        display_product_name="true" 
+        display_posted_date="true"
+        display_shared_channel="true">
+    </script>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
