js file created

--- a/faq.html
+++ b/faq.html
@@ -80,43 +80,63 @@
     </header>
 
     <main>
-        <section>
-            <h1 class="text-center text-orange my-3 font-60">Contact Us</h1>
-            <div class="row align-items-center justify-content-center my-5">
-                <div class="col-12 col-lg-6 px-5">
-                    <div class="d-flex justify-content-center">
-                        <img src="https://placehold.co/500x500/FDD1CB/white" class="rounded-0 img-fluid" alt="...">
+        <section class="faq">
+            <h1 class="text-center text-orange my-3 font-60">Frequently Asked Questions</h1>
+            <div class="accordion accordion-flush my-5" id="accordionFlushExample">
+                <div class="accordion-item shadow mb-5">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button accordion-faq collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        Are these genuine leather?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">All our products are made using high quality Genuine leather.</div>
+                  </div>
+                </div>
+                <div class="accordion-item shadow mb-5">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button accordion-faq collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        Is COD available?
+                      </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                      <div class="accordion-body">COD is not available right now. We are working towards it.</div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 px-5">
-                    <div class="">
-                        <form class="row g-3 my-3">
-                            <div class="col-12">
-                              <label for="validationDefault01" class="form-label">Full Name</label>
-                              <input type="text" class="form-control" id="validationDefault01" value="" required>
-                            </div>
-                            <div class="col-12">
-                              <label for="validationDefault02" class="form-label">Phone</label>
-                              <input type="text" class="form-control" id="validationDefault02" value="" required>
-                            </div>
-                            <div class="col-12">
-                                <label for="validationDefault03" class="form-label">Email</label>
-                                <input type="text" class="form-control" id="validationDefault03" value="" required>
-                            </div>
-                            <div class="col-12">
-                                <label for="validationDefault04" class="form-label">Message</label>
-                                <textarea type="text" class="form-control" id="validationDefault04" rows="3"></textarea>
-                            </div> 
-                            <div class="col-12 d-grid">
-                              <button class="btn btn-2" type="submit">Submit form</button>
-                            </div>
-                        </form>
+                <div class="accordion-item shadow mb-5">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button accordion-faq collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        Why are certain sizes unavailable?
+                      </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                      <div class="accordion-body">As we regularly keep updating our product range, we need to discontinue certain articles. Hence we do not refill these.</div>
+                    </div>
+                </div>
+                <div class="accordion-item shadow mb-5">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button accordion-faq collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                        Is there any warranty on the products?
+                      </button>
+                    </h2>
+                    <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                      <div class="accordion-body">We offer 3 months replacement warranty on our products against any manufacturing defects.</div>
+                    </div>
+                </div>
+                <div class="accordion-item shadow mb-5">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button accordion-faq collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                        What is the return period for the shoes?
+                      </button>
+                    </h2>
+                    <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                      <div class="accordion-body">There is a 7 day replacement window for exchange of unused products. We do not accept returns.</div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    
+
     <footer>
         <div class="row bg-orange-20 p-4 g-0">
             <div class="col-12 col-lg-2">
@@ -197,7 +217,39 @@
             </div>
         </div>
     </footer>
+
+    <script defer="defer" src="https://www.imprzd.com/bi/in-scol/app.js" inject="true" async test="{}" id="imprzd_SOL" domain="https://www.imprzd.com" api_type="scol" 
+    merchantdata="MTg=" 
+    imprzd_title_text="Customer Reviews" 
+    imprzd_title_font="Inter" 
+    imprzd_title_font_color="#DB4834"
+    imprzd_title_font_size="50" 
+    imprzd_title_font_weight="700" 
+    imprzd_button_text="VIEW MORE POSTS"
+    imprzd_button_url="https://gaitonde.com/testimonials.php"
+    imprzd_button_color="#DB4834"
+    imprzd_button_border_radius="10px"
+    imprzd_button_font="Inter" 
+    imprzd_button_font_color="#FFF" 
+    imprzd_button_font_size="23"
+    imprzd_button_font_weight="700" 
+    imprzd_post_title_font="Inter" 
+    imprzd_post_title_font_color="#DB4834"
+    imprzd_post_title_font_size="24" 
+    imprzd_post_title_font_weight="700" 
+    imprzd_post_desc_font="Inter"
+    imprzd_post_desc_font_color="#201D1D" 
+    imprzd_post_desc_font_size="16" 
+    imprzd_post_desc_font_weight="400"
+    imprzd_container_color="#FFF" 
+    imprzd_container_shadow_color="#ffffffaf"
+    google_font_link="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    display_customer_name="true" 
+    display_product_name="true" 
+    display_posted_date="true"
+    display_shared_channel="true"></script>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
 </body>
 </html>
