--- a/index.html
+++ b/index.html
@@ -160,89 +160,8 @@
         </section>
         <section>
             <h1 class="text-center text-orange my-3 font-60">Our Products</h1>
-            <div class="row">
-                <div class="col px-0">
-                    <div class="card rounded-0 border-1">
-                        <img src="https://placehold.co/300x300/FDD1CB/white" class="card-img-top rounded-0" alt="...">
-
-                        <div class="card-footer border-0 rounded-0 bg-orange-20 d-flex align-items-center justify-content-between">
-                            <p class="font-20 bold mb-0">Product 1</p>
-                            <img src="wwwroot/images/product-add-icon.svg" alt="add-icon">
-                        </div>
-                    </div>
-                </div>
-                <div class="col px-0">
-                    <div class="card rounded-0 border-1">
-                        <img src="https://placehold.co/300x300/FDD1CB/white" class="card-img-top rounded-0" alt="...">
-
-                        <div class="card-footer border-0 rounded-0 bg-orange-20 d-flex align-items-center justify-content-between">
-                            <p class="font-20 bold mb-0">Product 1</p>
-                            <img src="wwwroot/images/product-add-icon.svg" alt="add-icon">
-                        </div>
-                    </div>
-                </div>
-                <div class="col px-0">
-                    <div class="card rounded-0 border-1">
-                        <img src="https://placehold.co/300x300/FDD1CB/white" class="card-img-top rounded-0" alt="...">
-
-                        <div class="card-footer border-0 rounded-0 bg-orange-20 d-flex align-items-center justify-content-between">
-                            <p class="font-20 bold mb-0">Product 1</p>
-                            <img src="wwwroot/images/product-add-icon.svg" alt="add-icon">
-                        </div>
-                    </div>
-                </div>
-                <div class="col px-0">
-                    <div class="card rounded-0 border-1">
-                        <img src="https://placehold.co/300x300/FDD1CB/white" class="card-img-top rounded-0" alt="...">
-
-                        <div class="card-footer border-0 rounded-0 bg-orange-20 d-flex align-items-center justify-content-between">
-                            <p class="font-20 bold mb-0">Product 1</p>
-                            <img src="wwwroot/images/product-add-icon.svg" alt="add-icon">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col px-0">
-                    <div class="card rounded-0 border-1">
-                        <img src="https://placehold.co/300x300/FDD1CB/white" class="card-img-top rounded-0" alt="...">
-
-                        <div class="card-footer border-0 rounded-0 bg-orange-20 d-flex align-items-center justify-content-between">
-                            <p class="font-20 bold mb-0">Product 1</p>
-                            <img src="wwwroot/images/product-add-icon.svg" alt="add-icon">
-                        </div>
-                    </div>
-                </div>
-                <div class="col px-0">
-                    <div class="card rounded-0 border-1">
-                        <img src="https://placehold.co/300x300/FDD1CB/white" class="card-img-top rounded-0" alt="...">
-
-                        <div class="card-footer border-0 rounded-0 bg-orange-20 d-flex align-items-center justify-content-between">
-                            <p class="font-20 bold mb-0">Product 1</p>
-                            <img src="wwwroot/images/product-add-icon.svg" alt="add-icon">
-                        </div>
-                    </div>
-                </div>
-                <div class="col px-0">
-                    <div class="card rounded-0 border-1">
-                        <img src="https://placehold.co/300x300/FDD1CB/white" class="card-img-top rounded-0" alt="...">
-
-                        <div class="card-footer border-0 rounded-0 bg-orange-20 d-flex align-items-center justify-content-between">
-                            <p class="font-20 bold mb-0">Product 1</p>
-                            <img src="wwwroot/images/product-add-icon.svg" alt="add-icon">
-                        </div>
-                    </div>
-                </div>
-                <div class="col px-0">
-                    <div class="card rounded-0 border-1">
-                        <img src="https://placehold.co/300x300/FDD1CB/white" class="card-img-top rounded-0" alt="...">
-
-                        <div class="card-footer border-0 rounded-0 bg-orange-20 d-flex align-items-center justify-content-between">
-                            <p class="font-20 bold mb-0">Product 1</p>
-                            <img src="wwwroot/images/product-add-icon.svg" alt="add-icon">
-                        </div>
-                    </div>
-                </div>
+            <div class="row" id="divProduct">
+                
             </div>
             <div class="d-flex justify-content-center mt-4">
                 <button type="button" class="btn btn-outline-danger">
@@ -395,9 +314,9 @@
             display_shared_channel="true"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"
         integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
     <script src="wwwroot/js/index.js"></script>
     <script src="wwwroot/js/appsetting.js"></script>
 </body>
